# SyncU

./: .gitignore  Cargo.toml  README.md  build.rs  create_icon.rs
src/: app.rs  main.rs  models.rs  sync.rs  utils.rs
