[package]
name = "SyncU"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
sha2 = "0.10"
sysinfo = "0.29"
rfd = "0.11"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
embed-resource = "1.7"
ico = "0.1.0"
image = "0.24"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true           # Enable Link-Time-Optimization
codegen-units = 1    # Reduce parallelism for better optimization
panic = 'abort'      # Abort on panic
strip = true         # Strip symbols from binary
