[package]
name = "SyncU"
version = "0.5.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
sha2 = "0.10"
sysinfo = "0.36"
rfd = "0.15"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"           # For parallel processing
dashmap = "6.1"         # For concurrent hashmaps
crossbeam-channel = "0.5"  # Thread-safe channel


[build-dependencies]
embed-resource = "3.0"
ico = "0.4.0"
image = "0.25"

[profile.release]
opt-level = 3
lto = true           # Enable Link-Time-Optimization
codegen-units = 1    # Reduce parallelism for better optimization
strip = true         # Strip symbols from binary
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
rpath = false
